# quest

./: .commit_template  .gitignore  .readthedocs.yaml  README.md  demo.py  maze_demo.py  pyproject.toml  requirements.txt  setup.py  test_feature.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  resource_request.MD
.github/workflows/: test_feature.yml
contrib/: README.md
docs/: arcade_roles.txt  conf.py  index.rst
docs/api/: dialogue.rst  engines.rst  game.rst  index.rst  map.rst  sprite.rst
docs/examples/: grandmas_soup.rst  index.rst  island.rst  island_discrete.rst
docs/narrative/: index.rst  tick_model.rst
docs/pedagogy/: index.rst
docs/tutorial/: index.rst  install.rst
documentation/: arcade_objects.inv  conf.py  index.rst  upload.sh
documentation/api/: advanced.rst  dialogue.rst  easing.rst  engines.rst  errors.rst  game.rst  helpers.rst  index.rst  maze.rst  modal.rst  modules.rst  sprite.rst  sprites.rst  strategy.rst
documentation/examples/: index.rst  island.rst  maze.rst  peach.rst
documentation/narrative/: index.rst  maps.rst  tick_model.rst
documentation/pedagogy/: index.rst
documentation/tutorial/: index.rst  install.rst
images/: island.tmx  wood_tileset.tsx
quest/: INVENTORY.py  dialogue.py  easing.py  engines.py  errors.py  game.py  helpers.py  map.py  maze.py  maze_timer.py  modal.py  popup_menu.py  shim.py  sprite.py  strategy.py  text_label.py
quest/.ipynb_checkpoints/: sprite-checkpoint.py
questgame/: game.py  helpers.py  sprite.py  strategy.py  text_label.py
(+96 files in other folders)
