[tool.poetry]
name = "questgame"
packages = [ {include = "quest"} ]
version = "0.2.2"
description = "Quest provides a simpler interface to python's Arcade library."
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]
license = "MIT"
repository = "https://github.com/cproctor/quest"

[tool.poetry.dependencies]
python = "^3.9"
arcade = "2.6.9"
numpy = "^1.22.3"
easing-functions = "^1.0.4"
tqdm = "^4.64.0"
xvfbwrapper = "^0.2.9"
Shapely = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
